Avoid crash when a running SqlQueryMaker is deleted

Deletion only after a job has finished seems to prevent crashes in cases where
an already deleted job finishes and runs defaultEnd, and additionally cases
where SqlQueryMakerInternal is deleted during an sql query and it tries to emit
now deleted signals based on query results.

Also try to avoid running any further extra steps in SqlQueryMakerInternal::run if
abort has been called.

Fixes a flaky test, hopefully fixes also fixes a related bug

BUG: 431738